--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,36 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
-  }
+    "name": "infinitistorage-backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "start": "node ./out/index.bundle.js",
+        "dev": "rimraf out && cross-env NODE_ENV=development webpack --watch --progress --color",
+        "prod": "rimraf out && cross-env NODE_ENV=production webpack --progress --color"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "cross-env": "^7.0.3",
+        "express": "^4.17.1",
+        "path": "^0.12.7",
+        "request": "^2.88.2",
+        "rimraf": "^3.0.2",
+        "socket.io": "^4.2.0",
+        "ts-node": "^10.2.1",
+        "webpack-node-externals": "^3.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/preset-typescript": "^7.15.0",
+        "@types/express": "^4.17.13",
+        "babel-loader": "^8.2.2",
+        "css-loader": "^6.4.0",
+        "file-loader": "^6.2.0",
+        "style-loader": "^3.3.0",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.4.3",
+        "webpack": "^5.58.1",
+        "webpack-cli": "^4.9.0"
+    }
 }
