--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "proxy": "https://localhost:8080",
+    "homepage": "/infinitiStorage",
     "dependencies": {
         "@types/react": "^17.0.27",
         "@types/react-dom": "^17.0.9",
