--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "proxy": "https://localhost:8079",
+    "proxy": "http://localhost:8079",
     "homepage": "/infinitiStorage",
     "dependencies": {
         "@types/react": "^17.0.27",
@@ -13,6 +13,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "socket.io-client": "^4.3.0",
         "typescript": "^4.4.3"
     },
     "scripts": {
