--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,19 @@
     "proxy": "http://localhost:8079",
     "homepage": "/infinitiStorage",
     "dependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/react": "^17.0.27",
         "@types/react-dom": "^17.0.9",
+        "@types/react-router": "^5.1.17",
         "@types/react-router-dom": "^5.3.1",
+        "bcrypt": "^5.0.1",
         "cra-template-typescript": "1.1.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "sass": "^1.43.2",
         "socket.io-client": "^4.3.0",
         "typescript": "^4.4.3"
     },
