--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "express": "^4.17.1",
+        "node-forge": "^0.10.0",
         "path": "^0.12.7",
         "request": "^2.88.2",
         "rimraf": "^3.0.2",
