--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
         "@types/react-dom": "^17.0.9",
         "@types/react-router": "^5.1.17",
         "@types/react-router-dom": "^5.3.1",
-        "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "cra-template-typescript": "1.1.2",
+        "node-forge": "^0.10.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router": "^5.2.1",
