--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,17 @@
     "proxy": "http://localhost:8079",
     "homepage": "/infinitiStorage",
     "dependencies": {
+        "@chakra-ui/react": "^1.6.10",
+        "@emotion/react": "11",
+        "@emotion/styled": "11",
         "@types/bcrypt": "^5.0.0",
         "@types/react": "^17.0.27",
         "@types/react-dom": "^17.0.9",
         "@types/react-router": "^5.1.17",
         "@types/react-router-dom": "^5.3.1",
         "cra-template-typescript": "1.1.2",
+        "formik": "^2.2.9",
+        "framer-motion": "4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router": "^5.2.1",
