--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "cra-template-typescript": "1.1.2",
         "formik": "^2.2.9",
         "framer-motion": "4",
+        "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router": "^5.2.1",
