--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     },
     "dependencies": {
         "@types/bcryptjs": "^2.4.2",
+        "@types/compression": "^1.7.2",
         "bcryptjs": "^2.4.3",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^10.0.0",
