--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/compression": "^1.7.2",
+        "@types/lodash": "^4.14.176",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "cross-env": "^7.0.3",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "lodash": "^4.17.21",
         "mysql2": "^2.3.2",
         "path": "^0.12.7",
         "request": "^2.88.2",
